@@ -1,21 +1,19 @@
-package com.NamVu.RealtimeAuctionSystem.service;
+package com.NamVu.realtimeauctionsystem.service;
 
 import com.NamVu.realtimeauctionsystem.RealtimeAuctionSystemApplication;
 import com.NamVu.realtimeauctionsystem.dto.BidUpdateResult;
+import com.NamVu.realtimeauctionsystem.dto.CustomUserDetails;
 import com.NamVu.realtimeauctionsystem.entity.Auction;
 import com.NamVu.realtimeauctionsystem.entity.Bid;
 import com.NamVu.realtimeauctionsystem.entity.FraudLog;
 import com.NamVu.realtimeauctionsystem.entity.User;
-import com.NamVu.realtimeauctionsystem.enums.AuctionStatus;
-import com.NamVu.realtimeauctionsystem.enums.BidStatus;
-import com.NamVu.realtimeauctionsystem.enums.FraudType;
-import com.NamVu.realtimeauctionsystem.enums.UserStatus;
+import com.NamVu.realtimeauctionsystem.enums.*;
 import com.NamVu.realtimeauctionsystem.exception.AppException;
 import com.NamVu.realtimeauctionsystem.repository.AuctionRepository;
 import com.NamVu.realtimeauctionsystem.repository.BidRepository;
 import com.NamVu.realtimeauctionsystem.repository.FraudLogRepository;
 import com.NamVu.realtimeauctionsystem.repository.UserRepository;
-import com.NamVu.realtimeauctionsystem.service.RedisAuctionService;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -23,6 +21,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.kafka.test.context.EmbeddedKafka;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.DynamicPropertyRegistry;
@@ -66,12 +68,10 @@ class BiddingIntegrationTest {
 
     @DynamicPropertySource
     static void properties(DynamicPropertyRegistry registry) {
-        registry.add("spring.data.redis.host", redis::getHost);
-        registry.add("spring.data.redis.port", redis::getFirstMappedPort);
-
-        registry.add("spring.datasource.url", mysql::getJdbcUrl);
+        registry.add("spring.datasource.url", () -> mysql.getJdbcUrl() + "?createDatabaseIfNotExist=true");
         registry.add("spring.datasource.username", mysql::getUsername);
         registry.add("spring.datasource.password", mysql::getPassword);
+
         registry.add("spring.data.redis.host", redis::getHost);
         registry.add("spring.data.redis.port", redis::getFirstMappedPort);
     }
@@ -99,11 +99,33 @@ class BiddingIntegrationTest {
     private User bidder2;
     private Auction auction;
 
+    private void loginAs(User user, UserStatus userStatus) {
+        CustomUserDetails principal = CustomUserDetails.builder()
+                .id(user.getId())
+                .name(user.getName())
+                .email(user.getEmail())
+                .status(userStatus)
+                .role(Role.USER)
+                .build();
+
+        Authentication auth = new UsernamePasswordAuthenticationToken(
+                principal,
+                null,
+                principal.getAuthorities()
+        );
+
+        SecurityContext context = SecurityContextHolder.createEmptyContext();
+        context.setAuthentication(auth);
+        SecurityContextHolder.setContext(context);
+    }
+
     @BeforeEach
     void setUp() {
         // Clear data
         assertNotNull(redisTemplate.getConnectionFactory());
         redisTemplate.getConnectionFactory().getConnection().flushAll();
+
+        // Clear DB
         fraudLogRepository.deleteAll();
         bidRepository.deleteAll();
         auctionRepository.deleteAll();
@@ -111,14 +133,17 @@ class BiddingIntegrationTest {
 
         // Create test users
         seller = userRepository.save(User.builder()
+                .name("seller")
                 .email("seller@test.com")
                 .build());
 
         bidder1 = userRepository.save(User.builder()
+                .name("bidder1")
                 .email("bidder1@test.com")
                 .build());
 
         bidder2 = userRepository.save(User.builder()
+                .name("bidder2")
                 .email("bidder2@test.com")
                 .build());
 
@@ -148,6 +173,11 @@ class BiddingIntegrationTest {
         );
     }
 
+    @AfterEach
+    void clearSecurityContext() {
+        SecurityContextHolder.clearContext();
+    }
+
     // ============================================
     // TEST CASE 1: BID THÀNH CÔNG
     // ============================================
@@ -156,6 +186,8 @@ class BiddingIntegrationTest {
     @DirtiesContext
     @DisplayName("TC1: Bid thành công với giá hợp lệ")
     void shouldPlaceBidSuccessfully() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given
         BigDecimal bidPrice = new BigDecimal("1050.00"); // currentPrice + minStep
 
@@ -169,7 +201,7 @@ class BiddingIntegrationTest {
         assertEquals(bidPrice, result.getNewPrice());
 
         // Verify Redis
-        assertEquals(bidPrice, redisAuctionService.getCurrentPrice(auction.getId()));
+        assertEquals(0, bidPrice.compareTo(redisAuctionService.getCurrentPrice(auction.getId())));
         assertEquals(bidder1.getId(), redisAuctionService.getHighestBidderId(auction.getId()));
 
         // Wait for Kafka consumer
@@ -183,7 +215,7 @@ class BiddingIntegrationTest {
         // Verify Bid record
         List<Bid> bids = bidRepository.findByAuctionIdOrderByCreatedAtDesc(auction.getId());
         assertEquals(1, bids.size());
-        assertEquals(BidStatus.ACCEPTED, bids.get(0).getStatus());
+        assertEquals(BidStatus.ACCEPTED, bids.getFirst().getStatus());
     }
 
     // ============================================
@@ -193,6 +225,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC2: Từ chối bid khi giá < currentPrice + minStep")
     void shouldRejectBidWhenPriceTooLow() {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given: minStep = 50, currentPrice = 1000
         BigDecimal bidPrice = new BigDecimal("1040.00"); // < 1050
 
@@ -213,6 +247,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC2.1: Từ chối bid khi giá bằng currentPrice")
     void shouldRejectBidWhenPriceEqualsCurrent() {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given
         BigDecimal bidPrice = new BigDecimal("1000.00"); // = currentPrice
 
@@ -228,6 +264,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC2.2: Chấp nhận bid khi giá = currentPrice + minStep")
     void shouldAcceptBidWhenPriceEqualsMinimum() {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given
         BigDecimal bidPrice = new BigDecimal("1050.00"); // = currentPrice + minStep
 
@@ -258,6 +296,7 @@ class BiddingIntegrationTest {
         // When: 2 bids cùng lúc
         executor.submit(() -> {
             try {
+                loginAs(bidder1, UserStatus.ACTIVE);
                 BidUpdateResult result = redisAuctionService.updateBidWithLock(
                         auction.getId(), bidder1.getId(), price1
                 );
@@ -269,6 +308,7 @@ class BiddingIntegrationTest {
 
         executor.submit(() -> {
             try {
+                loginAs(bidder2, UserStatus.ACTIVE);
                 BidUpdateResult result = redisAuctionService.updateBidWithLock(
                         auction.getId(), bidder2.getId(), price2
                 );
@@ -286,8 +326,7 @@ class BiddingIntegrationTest {
         assertEquals(1, successCount, "Only one bid should succeed");
 
         // Verify final price
-        assertEquals(new BigDecimal("1100.00"),
-                redisAuctionService.getCurrentPrice(auction.getId()));
+        assertEquals(0, new BigDecimal("1100.00").compareTo(redisAuctionService.getCurrentPrice(auction.getId())));
     }
 
     // ============================================
@@ -297,6 +336,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC4: Phát hiện self-bidding và gán FLAGGED")
     void shouldFlagSelfBidding() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given: Seller tự bid
         BigDecimal bidPrice = new BigDecimal("1050.00");
 
@@ -329,6 +370,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC5: Phát hiện rate limit (>10 bids/60s) và gán FLAGGED")
     void shouldFlagRateLimitViolation() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given: Tạo 11 bids trong 60s
         for (int i = 1; i <= 11; i++) {
             BigDecimal price = new BigDecimal("1000.00").add(BigDecimal.valueOf(i * 50));
@@ -365,6 +408,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC6: Phát hiện price spike (>1.5x giá cũ) và gán FLAGGED")
     void shouldFlagPriceSpike() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given: spike = 600 (> 1.5x giá cũ)
         BigDecimal spikePrice = new BigDecimal("1600.00");
 
@@ -394,6 +439,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC7: Từ chối bid khi auction đã kết thúc")
     void shouldRejectBidWhenAuctionEnded() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given: Set auction to ENDED
         auction.setStatus(AuctionStatus.ENDED);
         auctionRepository.save(auction);
@@ -417,6 +464,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC8: User bị block (không bid được)")
     void shouldCreateRejectedBidWhenUserBlocked() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given: First bid success
         redisAuctionService.updateBidWithLock(
                 auction.getId(), bidder1.getId(), new BigDecimal("1050.00")
@@ -425,8 +474,7 @@ class BiddingIntegrationTest {
         Thread.sleep(1000);
 
         // Block user
-        bidder1.setStatus(UserStatus.BLOCKED);
-        userRepository.save(bidder1);
+        loginAs(bidder1, UserStatus.BLOCKED);
 
         // When: Try to bid again
         Thread.sleep(2000);
@@ -444,6 +492,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC9: Gia hạn auction khi bid trong khoảng anti-snipe")
     void shouldExtendAuctionOnLastMinuteBid() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given: Set end time to 30s from now
         Instant originalEndTime = Instant.now().plus(30, ChronoUnit.SECONDS);
         auction.setEndTime(originalEndTime);
@@ -463,7 +513,7 @@ class BiddingIntegrationTest {
         assertTrue(updated.getEndTime().isAfter(originalEndTime));
 
         long extension = Duration.between(originalEndTime, updated.getEndTime()).getSeconds();
-        assertEquals(60, extension);
+        assertEquals(30, extension);
     }
 
     // ============================================
@@ -473,6 +523,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC10: Nhiều bids tuần tự từ các bidders khác nhau")
     void shouldHandleMultipleSequentialBids() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given
         List<BidUpdateResult> results = new ArrayList<>();
 
@@ -482,16 +534,19 @@ class BiddingIntegrationTest {
         ));
         Thread.sleep(500);
 
+        loginAs(bidder2, UserStatus.ACTIVE);
         results.add(redisAuctionService.updateBidWithLock(
                 auction.getId(), bidder2.getId(), new BigDecimal("1100.00")
         ));
         Thread.sleep(500);
 
+        loginAs(bidder1, UserStatus.ACTIVE);
         results.add(redisAuctionService.updateBidWithLock(
                 auction.getId(), bidder1.getId(), new BigDecimal("1150.00")
         ));
         Thread.sleep(500);
 
+        loginAs(bidder2, UserStatus.ACTIVE);
         results.add(redisAuctionService.updateBidWithLock(
                 auction.getId(), bidder2.getId(), new BigDecimal("1200.00")
         ));
@@ -526,6 +581,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC11: Xử lý optimistic lock với retry thành công")
     void shouldRetryOnOptimisticLock() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // Given: 10 concurrent bids
         ExecutorService executor = Executors.newFixedThreadPool(10);
         CountDownLatch latch = new CountDownLatch(10);
@@ -569,6 +626,8 @@ class BiddingIntegrationTest {
     @Test
     @DisplayName("TC12: Lưu đầy đủ lịch sử bids (ACCEPTED + REJECTED + FLAGGED)")
     void shouldMaintainCompleteBidHistory() throws InterruptedException {
+        loginAs(bidder1, UserStatus.ACTIVE);
+
         // When: Mixed bids
         // 1. Normal bid
         redisAuctionService.updateBidWithLock(
@@ -577,6 +636,7 @@ class BiddingIntegrationTest {
         Thread.sleep(500);
 
         // 2. Rejected bid (too low)
+        loginAs(bidder1, UserStatus.ACTIVE);
         redisAuctionService.updateBidWithLock(
                 auction.getId(), bidder2.getId(), new BigDecimal("1060.00")
         );
